--- a/index.html
+++ b/index.html
@@ -17,3 +17,68 @@
         </p>
       </body>
 </html>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title> webpage </title>
+    </head>
+    <body>
+      <h4  style="text-align:center;">RED BLOOD CELL</h4>
+      <table border="2">
+        <tr>
+          <th> No.</th>
+          <th> types </th>
+            <th>function</th>
+          </tr>
+          <tr>
+            <td>1</td>
+            <td>Erythrocytes</td>
+              <td>Numerous,circular non nucleated biconcave and diskshaped cell. primarily carry oxygen and collect carbon dioxide through the use of hemoglobin.
+              </td>
+             </tr>
+             <table border="2">
+               <h4  style="text-align:center;">WHITE BLOOD CELLS</h4>
+               <h5>Agranulocytes</h5>
+             <tr>
+              <td>1</td>
+              <td> Lymphocytes</td>
+                <td>Large oval nulceous.Clear cytoplasam forms a narrow layer very few in number 24%of total WBC count.They are about the size of RBC.Lymphocytes include natural killer cells (which function in cell-mediated, cytotoxic innate immunity), T cells (for cell-mediated, cytotoxic adaptive immunity), and B cells (for humoral, antibody-driven adaptive immunity). They are the main type of cell found in lymph, which prompted the name "lymphocyte".
+               </tr>
+               <tr>
+                 <td>2</td>
+                 <td> Monocyte</td>
+                 <td>Monocytes are a type of leukocyte, or white blood cell. They are the largest type of leukocyte and can differentiate into macrophages and conventional dendritic cells. As a part of the vertebrate innate immune system monocytes also influence the process of adaptive immunity. There are at least three subclasses of monocytes in human blood based on their phenotypic receptors.</td>
+                 </tr>
+                 </table>
+                 <h5>Granulocytes</h5>
+                 <table border="2">
+                   <tr>
+                     <td>1</td>
+                     <td>Neutrophils</td>
+                     <td>Neutrophils (also known as neutrocytes or heterophils) are the most abundant type of granulocytes and make up 40% to 70% of all white blood cells in humans. They form an essential part of the innate immune system, with their functions varying in different animals.</td>
+                     </tr>
+                     <tr>
+                        <td>2</td>
+                        <td>Basophils</td>
+                        <td>Basophils are a type of white blood cell. Basophils are the least common type of granulocyte, representing about 0.5% to 1% of circulating white blood cells. However, they are the largest type of granulocyte. They are responsible for inflammatory reactions during immune response, as well as in the formation of acute and chronic allergic diseases.</td>
+                        </tr>
+                        <tr>
+                          <td>3</td>
+                          <td>Eosinophils</td>
+                          <td>Eosinophils, sometimes called eosinophiles or, less commonly, acidophils, are a variety of white blood cells (WBCs) and one of the immune system components responsible for combating multicellular parasites and certain infections in vertebrates. Along with mast cells and basophils, they also control mechanisms associated with allergy and asthma</td>
+                          </tr>
+                      </table>
+                      <h4  style="text-align:center;">PLATELETS</h4>
+
+                            <table border="2">
+                              <tr>
+                            <td>1</td>
+                            <td>Platelets</td>
+                            <td>Platelets, or thrombocytes, are very small, irregularly shaped clear cell fragments, 2–3 µm in diameter, which derive from fragmentation of megakaryocytes. The average lifespan of a platelet is normally just 5 to 9 days. Platelets are a natural source of growth factors. They circulate in the blood of mammals and are involved in hemostasis, leading to the formation of blood clots. Platelets release thread-like fibers to form these clots.</td>
+                            </tr>
+                            </table>
+
+
+        </table>
+    </body>
+  </html>
