--- a/disoder.html
+++ b/disoder.html
@@ -20,7 +20,7 @@
     <li> <h4 style="color:red";>Thalassemia</h4></li>
      <li><h4 style="color:red";>Polycythemia vera</h4></li>
        </ul>
-       <h3 style="color:blue;">white blood cell disorders</h3>
+       <h3 style="color:blue;">White blood cell disorders</h3>
        <ul style="list-style-type:square;">
         <li style="color:red";> Lymphoma</li>
 
@@ -29,7 +29,7 @@
         <li  style="color:red";> Myelodysplastic syndrome (MDS)</li>
 
          </ul>
-           <h3 style="color:blue;">platelet disorders</h3>
+           <h3 style="color:blue;">Platelet disorders</h3>
                  <ul style="list-style-type:square;">
                 <li style="color:red" > Von Willebrand disease </li>
 
