--- a/rbc.html
+++ b/rbc.html
@@ -5,7 +5,7 @@
     </head>
     <body>
       <h1  style="text-align:center;">RED BLOOD CELL</h1>
-     <div style="text-align:center"><img src="red.jpg" width="400px" style="border=5px solid"> </div>
+     <div style="text-align:center"><img src="red.jpg" width="400px" style="border:5px solid"> </div>
       <p> <h4>Red blood cells or erythrocytes, primarily carry oxygen and collect carbon dioxide through the use of hemoglobin. Hemoglobin is an iron-containing protein that gives red blood cells their color and facilitates transportation of oxygen from the lungs to tissues and carbon dioxide from tissues to the lungs to be exhaled. Red blood cells are the most abundant cell in the blood, accounting for about 40-45% of its volume. Red blood cells are circular, biconcave, disk-shaped and deformable to allow them to squeeze through narrow capillaries. They do not have a nucleus. Red blood cells are much smaller than most other human cells.
 
 RBCs are formed in the red bone marrow from hematopoietic stem cells in a process known as erythropoiesis. In adults, about 2.4 million RBCs are produced each second. The normal RBCs count is 4.5 to 5 millions per cu.mm. RBCs have a lifespan of approximately 100-120 days. After they have completed their lifespan, they are removed from the bloodstream by the spleen.
