--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
        <div style="text-align:center"><img src="cells.jpg" width="50%" style="border:5px solid"> </div>
       <h4 style="color:blue;"> About us </h4>
       <p style="text-align:center;border:1px inset black">
-        <h4>A blood cell, also called a hematopoietic cell, hemocyte, or hematocyte, is a cell produced through hematopoiesis and found mainly in the blood. Major types of blood cells include <a href="rbc.html">red blood cells(RBC)</a> (erythrocytes), white blood cells(WBC) (leukocytes), and platelets (thrombocytes). Together, these three kinds of blood cells add up to a total 45% of the blood tissue by volume, with the remaining 55% of the volume composed of plasma, the liquid component of blood.</h4>
+        <h4>A blood cell, also called a hematopoietic cell, hemocyte, or hematocyte, is a cell produced through hematopoiesis and found mainly in the blood. Major types of blood cells include <a href="rbc.html">red blood cells(RBC)</a> (erythrocytes), white blood cells(WBC) (leukocytes), and platelets (thrombocytes). Together, these three kinds of blood cells add up to a total 45% of the blood tissue by volume, with the remaining 55% of the volume composed of  <a href="plasma.html">plasma</a>, the liquid component of blood.</h4>
       </p>
         <h3> Search for </h3>
       <a href=" types.html">  Blood cells types </a> <br />
