--- a/click.html
+++ b/click.html
@@ -16,6 +16,23 @@
         DOB: <input type="date" min="2000-01-01">/  <br  />  <br />
         Phone No : <input type="text" placeholder="Ph Number" /> <br  />  <br />
         Programme: <input type="text"  >/<br  />  <br />
+          District:
+        <select>
+          <option>Kasaragod</option>
+            <option>Kannur</option>
+              <option>Wayanad</option>
+                <option>kozikod</option>
+                  <option>Malapuram</option>
+                    <option>Palakkad</option>
+                      <option>Trissur</option>
+                        <option>Kottayam</option>
+                          <option>Pathanmthitta</option>
+                            <option>Idukki</option>
+                              <option>Alappuza</option>
+                                <option>Kollam</option>
+                                  <option>Thiruvanathapuram</option>
+                                    <option>Ernakulam</option>
+                                  </select> <br /> <br />
         Lanaguages Known:
         Malyalam: <input type="checkbox"  value="mal"  />
         Hindi:<input type="checkbox"  value="hin"  />
