--- a/click.html
+++ b/click.html
@@ -15,7 +15,7 @@
         others:<input type="radio" value="others" name="gender" /> <br  />  <br />
         DOB: <input type="date" min="2000-01-01">/  <br  />  <br />
         Phone No : <input type="text" placeholder="Ph Number" /> <br  />  <br />
-        Programme: <input type="text"  >/<br  />  <br />
+        Programme: <input type="text"  ><br  />  <br />
           District:
         <select>
           <option>Kasaragod</option>
