--- a/click.html
+++ b/click.html
@@ -13,7 +13,7 @@
       male:<input type="radio" value="male" name="gender" />
         female:<input type="radio" value="female" name="gender" />
         others:<input type="radio" value="others" name="gender" /> <br  />  <br />
-        DOB: <input type="date" min="2000-01-01">/  <br  />  <br />
+        DOB: <input type="date" min="2000-01-01">  <br  />  <br />
         Phone No : <input type="text" placeholder="Ph Number" /> <br  />  <br />
         Programme: <input type="text"  ><br  />  <br />
           District:
