--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title> webpage </title>
     </head>
-    <body style="width:60%;margin:auto">
+    <body style="width:60%;margin:auto; text-align:center;border:1px solid black">
       <h1 style="text-align:center;"> BLOOD CELLS </h1>
        <div style="text-align:center"><img src="cells.jpg" width="50%" style="border:5px solid"> </div>
       <h4 style="color:blue;"> About us </h4>
