--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title> webpage </title>
+    <title> blood cell </title>
     </head>
     <body style="width:60%;margin:auto; text-align:center;border:1px solid black">
       <h1 style="text-align:center;"> BLOOD CELLS </h1>
